Updates for version support